feat: set revisionHistoryLimit to 3 for all deployments

--- a/kubernetes/applications/sealed-secrets.yaml
+++ b/kubernetes/applications/sealed-secrets.yaml
@@ -11,6 +11,8 @@ spec:
     targetRevision: 2.17.2
     helm:
       releaseName: sealed-secrets
+      values: |
+        revisionHistoryLimit: 3
   destination:
     server: https://kubernetes.default.svc
     namespace: sealed-secrets
@@ -20,10 +22,10 @@ spec:
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
-  - group: ""
-    kind: Service
-    jsonPointers:
-    - /spec/clusterIP
+    - group: ""
+      kind: Service
+      jsonPointers:
+        - /spec/clusterIP
 
 ---
 apiVersion: argoproj.io/v1alpha1
@@ -40,6 +42,7 @@ spec:
     helm:
       releaseName: sealed-secrets-web
       values: |
+        revisionHistoryLimit: 3
         sealedSecrets:
           namespace: sealed-secrets
           serviceName: sealed-secrets
