--- a/kubernetes/applications/cert-manager.yaml
+++ b/kubernetes/applications/cert-manager.yaml
@@ -12,6 +12,13 @@ spec:
     helm:
       values: |
         installCRDs: true
+        revisionHistoryLimit: 3
+        webhook:
+          revisionHistoryLimit: 3
+        cainjector:
+          revisionHistoryLimit: 3
+        startupapicheck:
+          revisionHistoryLimit: 3
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
