fix: use global.revisionHistoryLimit for cert-manager

--- a/kubernetes/applications/cert-manager.yaml
+++ b/kubernetes/applications/cert-manager.yaml
@@ -12,12 +12,8 @@ spec:
     helm:
       values: |
         installCRDs: true
-        revisionHistoryLimit: 2
-        webhook:
-          revisionHistoryLimit: 2
-        cainjector:
-          revisionHistoryLimit: 2
-        startupapicheck:
+        replicaCount: 1
+        global:
           revisionHistoryLimit: 2
   destination:
     server: https://kubernetes.default.svc
