--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -15,8 +15,10 @@ resources:
   - sealed-secrets/sealed-argocd-secret.yaml
   - sealed-secrets/sealed-ghcr-credentials.yaml
   - sealed-secrets/github-andex-tokyo-creds.yaml
+  - sealed-secrets/sealed-datadog-secret.yaml
   - applications/obsidian-sync.yaml
   - applications/rize-dashboard.yaml
+  - applications/datadog.yaml
 patches:
   - path: argocd/argocd-cmd-params-cm.yaml
   - path: argocd/argocd-nodeport.yaml
